src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S64MinUnderflow-StashIr.error
error: Value exceeds min limit of 's64'.
--> main.hs:7:17
  | 
7 |         return -9223372036854775809;}}
  |                 ^^^^^^^^^^^^^^^^^^^
